Atualização link do nome.

--- a/desafios/desafio010_siteCompleto/android.html
+++ b/desafios/desafio010_siteCompleto/android.html
@@ -144,7 +144,7 @@
         </article>
     </main>
     <footer>
-        <P>Site criado por <a href="https://github.com/filipeluisgg" target="_blank">Luis Felipe Ota</a>.</P>
+        <p>Site criado por <a href="https://github.com/filipeluisgg" target="_blank">Luis Felipe Ota</a>.</p>
     </footer>
 </body>
 
