--- a/desafios/desafio012_cordelModerno/index.html
+++ b/desafios/desafio012_cordelModerno/index.html
@@ -14,11 +14,11 @@
             Cordel Moderno
         </h1>
         <p>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -32,7 +32,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -46,7 +46,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -70,7 +70,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -83,7 +83,7 @@
     </section>
 
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
