--- a/desafios/desafio012_cordelModerno/index.html
+++ b/desafios/desafio012_cordelModerno/index.html
@@ -32,7 +32,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -70,7 +70,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -106,7 +106,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/filipeluisgg" target="_blank">Luis Felipe Ota</a>.</p>
+        <p>Desenvolvido por <a href="https://github.com/filipeluisgg" target="_blank">Luis Felipe Ota</a>.</p>
     </footer>
 </body>
 
